Updates from ShareLaTeX

--- a/Development.tex
+++ b/Development.tex
@@ -2,12 +2,34 @@
 
 Σε αυτό το κεφάλαιο θα αναπτυχθούν συνολικά δώδεκα αθροιστές υπολοίπου $2^n-1$
 ακολουθώντας την αρχιτεκτονική που παρουσιάστηκε στο προηγούμενο κεφάλαιο 
-με τα ελάχιστα επίπεδα. Ανάλογα με την παραγοντοποίηση που τους εφαρμόζεται 
-οι αθροιστές ομαδοποιούνται σε τρείς ομάδες, Prefix, Ling και Jackson,
+με τα ελάχιστα επίπεδα. Ανάλογα με το είδος της παραγοντοποίησης που τους εφαρμόζεται 
+οι αθροιστές ομαδοποιούνται σε τρεις ομάδες, Prefix, Ling και Jackson,
 και σε κάθε ομάδα θα αναπτυχθεί ένας 8-bit, ένας 16-bit, ένας 32-bit και ένας 64-bit 
 αθροιστής. Για κάθε ομάδα θα αναλύεται και σχηματικά ο 8-bit αθροιστής λόγω του 
 ευδιάκριτου σχήματος που τον περιγράφει, ενώ για τους υπόλοιπους θα δοθεί η
 συναρτησιακή λογική πλήρως σε άλγεβρα Μπουλ.
+
+
+
+
+\subsection{Βασική δομή}
+Στην εικόνα \ref{2^8-1_Tree_2x4} παρουσιάζεται προσεγγιστικά η δομή των αθροιστών υπολοίπου $2^8-1$ 
+που θα χρησιμοποιηθεί παρακάτω. Ενώ η δομή είναι κοινή και για τα τρία είδη αθροιστών το κάθε σχήμα 
+αντιπροσωπεί διαφορετική λογική συνάρτηση. Επίσης στο δέντρο αυτό ακολουθείται η καταστευέι μόνο 
+των σημάτων που οδηγόυν τον τελευταίο πολυπλέκτη, δηλαδή στην περίπτωση του Prefix το σήμα G, στου Ling
+το σήμα H και στο Jackson το R.
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{J8_Color.png}
+\caption{Jackson 8-bit $2^n-1$ Adder}
+\label{2^8-1_Tree_2x4}
+\end{figure}
+
+
+
+
+
+
 
 \subsection{Prefix $2^n-1$}
 %\subsubsection{$2^8-1$}
@@ -36,6 +58,18 @@
 %---------------------------------------------------
 \subsection{Jackson $2^n-1$}
 %---------------------------------------------------
+Στην ενότητα \ref{section:jackson} έγινε μια αναφορά σε σχεδιαστικούς κανόνες όσο αφορά τους 
+αθροιστές Jackson. Για την ανάπτυξη ενός Jacson αθροιστή υπάρχει ένα μεγάλο πλήθος πιθανών υλοποιήσεων,
+όχι μόνο στην επιλογή του προθεματικού δέντρου και το πλήθος των όρων της παραγοντοποίησης ( Radix-2, 
+Radix-3, Radix-4 ... ), κάτι που αφορά και τους αθροιστές Prefix και Ling, αλλά 
+και στην επιλογή της συνάρτησης παραγοντοποίησης σε κάθε επίπεδο.
+\\\\
+\textcolor{red}{[Γράψε όλους τους συνδυασμούς για έναν 8-bit ή 16-bit αθροιστή σε συντομία
+π.χ. για 8 = 2x2x2, 2x4, 4x2 , και σε κάθε ένα τις πιθανές Burgess Συναρτήσεις]}
+
+
+
+
 
 
 \subsubsection{$2^8-1$}
@@ -44,12 +78,7 @@
 % Figure
 %
 %--------------------------------------------
-\begin{figure}[ht]
-\centering
-\includegraphics[width=\textwidth]{J8_Color.png}
-\caption{Jackson 8-bit $2^n-1$ Adder}
-\label{Jackson_8-bit_Tree}
-\end{figure}
+
 
 
 
@@ -117,6 +146,47 @@ sum_7 =& !R^3_{6:7} * (a_7 \oplus b_7) + R^3_{6:7} * (a_7 \oplus b_7 \oplus D_{6
 \end{split}
 \end{equation*}
 \rule{\linewidth}{0.5mm}
+
+
+
+
+
+
+
+
+
+
+
+\subsubsection{Λογική περιγραφή των $2^{16}-1$,$2^{32}-1$ και $2^{64}-1$,}
+\rule{\linewidth}{0.5mm}
+\begin{equation*}
+\begin{split}
+p_7 =& a_7 + b_7\\
+g_7 =& a_7 * b_7\\
+R^1_{7:6} =& g_7 + g_{6}\\
+Q^1_{7:6} =& p_7 * p_{6}\\
+R^3_{7:0} =& R^1_{7:6} + R^1_{5:4} + Q^1_{4:3} R^1_{3:2} + Q^1_{4:3} Q^1_{2:1} R^1_{1:0}\\
+D_{7:5} =& g_7 + p_7g_{6} + p_7p_{6}p_{5}\\
+sum_7 =& !R^3_{6:7} * (a_7 \oplus b_7) + R^3_{6:7} * (a_7 \oplus b_7 \oplus D_{6:4})
+\end{split}
+\end{equation*}
+\rule{\linewidth}{0.5mm}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
