--- a/Ling.tex
+++ b/Ling.tex
@@ -4,7 +4,7 @@
 διάφοροι τρόποι υπολογισμού των κρατουμένων για την υλοποίηση του CLA. Όπως, λοιπον,
 έχει αποδειχθεί, οι δομές CLA είναι ιδανικές για την ελάττωση της καθυστέρησης υπολογισμού
 του αποτελέσματος. Παρ' όλ' αυτά στο παρόν κεφάλαιο θα παρουσιαστεί μια βελτίωση που προτάθηκε 
-από τον Ling \cite{ling}.
+από τον Ling \cite{5390638} .
 
 
 
@@ -136,14 +136,12 @@ $Η$ είναι αυτό που υπολογίζεται τελευταίο χρ
 είναι στο κρίσιμο μονοπάτι\footnote{Κρίσιμο μονοπάτι (critical path) Το μονοπάτι με αρχί την είσοδο και τέλος την έξοδο του κυκλώματος που έχει την μεγαλύτερη καθυστέρηση}. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
 έχει τελική τιμή στην έξοδο της πριν οριστικοποιηθεί η τιμή του σήματος H, παράλληλα 
 με τον υπολογισμό της. 
-\\\\
- \textcolor{red}{[Ίσως να ήταν ενδιαφέρον να φτιαχτούν αυτά τα δύο modules και να μετρηθεί 
- το εμβαδόν και το delay τους στο Design Compiler]}
-\\
 
 %------------------------------------------------
  Παρατηρούμε πως η μέθοδος του Ling μειώνει την πολυπλοκότητα μόνο στο πρώτο επίπεδο 
- του αθροιστή
+ του αθροιστή.
+ 
+ 
  
  
  
