--- a/modAdder.tex
+++ b/modAdder.tex
@@ -6,7 +6,7 @@
 \end{equation*}
 Αριθμητικές υπολοίπου έχουν εφαρμογές σε ένα μεγάλο πλήθος εφαρμογών εφόσον αποτελούν και 
 την βάση για τα Residue Number Systems (RNS). Επίσης αποτελούν μέρος της ψηφιακής
-επεξεργασίας σημάτων και ψηφιακών φίλτρων , κρυπτογραφίας , σε τεχνικές ανίχνευσης και διόρθωσης σφάλματος καθώς και σε υψηλών ταχυτήτων δίκτυα. Η διαδική άθροιση είναι σε 
+επεξεργασίας σημάτων και ψηφιακών φίλτρων , κρυπτογραφίας , σε τεχνικές ανίχνευσης και διόρθωσης σφάλματος καθώς και σε υψηλών ταχυτήτων δίκτυα. Η δυαδική άθροιση είναι σε 
 αριθμητική υπολοίπου και γράφεται $(A+B)\ mod\ n$ όπου n είναι το πλήθος των δυαδικών 
 ψηφίων των A και B. 
 Στην παρούσα ενότητα θα μελετηθούν οι αθροιστές υπολοίπου $2^n-1$ όπου η επιτάχυνση τους είναι ο σκοπός μας.
@@ -269,9 +269,14 @@ $G_{1:6}$ υπονοείται η παρακάτω έκφραση :
 \begin{equation*}
     G_{1:7} = g_1 + p_1g_0 + p_1p_0g_7 + p_1p_0p_7g_6
 \end{equation*}
-Στην παρακάτω εικόνα φαίνεται η διαδικασία αυτή για το $G_{4:5} = G^*_{4:5}$. Είναι εμφανές
-πως το προηγούμενο στοιχείο του μηδέν είναι το $n-1$, δηλαδή το επτά στην περίπτωση του 8-bit
-αθροιστή. 
+Είναι σημαντικό να ξεκαθαριστεί πως αυτός ο τρόπος διατύπωσης είναι χρήσιμος στην περιγραφή μόνο
+αθροιστών υπολοίπου $2^n-1$. Στις περιπτώσεις άλλων αθροιστών καθίσταται απαγορευμένη έκφραση.Για παράδειγμα
+στους αθροιστές ακεραίων με κρατούμενο εισόδου το προηγούμενο ζεύγος του $(g_0,p_0)$ δεν είναι το 
+$(g_{n-1},p_{n-1})$ αλλά, όπως έχει προαναφερθεί και στα προηγούμενα κεφάλαια. το $c_{-1}$
+
+Στην παρακάτω εικόνα εφαρμόζεται η διαδικασία αυτή για το $G_{4:5} = G^*_{4:5}$. Είναι εμφανές
+πως το προηγούμενο στοιχείο του μηδέν είναι το $n-1$, δηλαδή το επτά στην περίπτωση του $2^8-1$
+αθροιστή υπολοίπου. 
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.6]{Round_numbers.png}
@@ -283,7 +288,7 @@ $G_{1:6}$ υπονοείται η παρακάτω έκφραση :
 \centering
 \includegraphics[width=\textwidth]{2^8-1_new_structure.png}
 \caption{Παράλληλος προθεματικός αθροιστής υπολοίπου $2^8-1$}
-\label{fig:2^n-1_simple_Prefix_structure}
+\label{fig:2^8-1_new_structure}
 \end{figure}
 
 
