--- a/references.bib
+++ b/references.bib
@@ -1,9 +1,19 @@
+% ------------------------------------------------------------------------------------
+% N. Burgess - Implementation of recursive Ling adders in CMOS VLSI
+% ------------------------------------------------------------------------------------
+@INPROCEEDINGS{5470204,
+author={N. Burgess},
+booktitle={2009 Conference Record of the Forty-Third Asilomar Conference on Signals, Systems and Computers},
+title={Implementation of recursive Ling adders in CMOS VLSI},
+year={2009},
+volume={},
+number={},
+pages={1777-1781},
+keywords={CMOS digital integrated circuits;VLSI;adders;deep-submicron CMOS VLSI;recursive Ling adders;Very large scale integration},
+doi={10.1109/ACSSC.2009.5470204},
+ISSN={1058-6393},
+month={Nov},}
 
-@Article{neil_burgess,
-author = {Neil Burgess},
-title = {Implementation of Recursive Ling Adders in CMOS VLSI},
-year = {2009}
-}
 
 @Article{j32_bit,
 author = {Matthew Keeter and David Money Harris and Andrew Macrae and Rebecca Glick and Madaleine Ong and Justin Schauer},
@@ -17,11 +27,21 @@ title = {Implementation of 64-bit Jackson Adders},
 year = {2013}
 }
 
-@Article{jackson,
-author = {Robert Jackson and Sunil Talwar},
-title = {High Speed Binary Addition},
-year = {2004}
-}
+% ------------------------------------------------------------------------------------
+% JACKSON - High speed binary addition
+% ------------------------------------------------------------------------------------
+@INPROCEEDINGS{1399373,
+author={R. Jackson and S. Talwar},
+booktitle={Conference Record of the Thirty-Eighth Asilomar Conference on Signals, Systems and Computers, 2004.},
+title={High speed binary addition},
+year={2004},
+volume={2},
+number={},
+pages={1350-1353 Vol.2},
+keywords={adders;carry logic;computational complexity;floating point arithmetic;parallel architectures;Ling architectures;adder architectures;address generation;arithmetic logic unit;complexity reduction;electronic circuits;floating-point operations;high speed binary addition;parallel prefix method;Added delay;Adders;Binary trees;Computer architecture;Concurrent computing;Counting circuits;Electronic circuits;Equations;Floating-point arithmetic;Logic functions},
+doi={10.1109/ACSSC.2004.1399373},
+ISSN={},
+month={Nov},}
 
 @Article{vergos,
 author = {G.Dimitrakopoulos and D. G. Nikolos and H. T. Vergos and D. Nikolos and C. Efstathiou},
@@ -34,11 +54,21 @@ title = {High-Speed Parallel-Prefix Modulo $2^n-1$ Adders},
 year = {2000}
 }
 
-@Article{ling,
-author = {H. Ling},
-title = {High speed binary adder},
-year = {1981}
-}
+% ------------------------------------------------------------------------------------
+% LING - High-Speed Binary Adder
+% ------------------------------------------------------------------------------------
+@ARTICLE{5390638,
+author={H. Ling},
+journal={IBM Journal of Research and Development},
+title={High-Speed Binary Adder},
+year={1981},
+volume={25},
+number={3},
+pages={156-166},
+keywords={},
+doi={10.1147/rd.252.0156},
+ISSN={0018-8646},
+month={March},}
 
 @Article{Sparseness_ling,
 author = {Giorgos Dimitrakopoulos and Dimitris Nikolos},
