--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,8 @@
 %\usepackage[LGR, T1]{fontenc}
 \linespread{1} % Line spacing
 
+
+
 % FONT THEMES
 % ----------------------------------
 % \usepackage{kerkis}
@@ -15,6 +17,8 @@
 % \usepackage{kmath,kerkis} % The order of the packages matters; kmath changes the default text font
 % \usepackage[T1]{fontenc}
 % ----------------------------------
+
+
 
 % Hyper references - PDF 
 % -----------------------
@@ -37,10 +41,10 @@
 
 
 
-
 % Multi-columns
 % -----------------------
 \usepackage{multicol}
+
 
 
 % Pictures
@@ -54,11 +58,12 @@
 \counterwithin{figure}{section}
 \usepackage{float}          % Places the float at precisely the location in the LaTeX code
 
+
+
 % Upper and Footer Lines
 % -----------------------
 \usepackage{fancyhdr}
 \usepackage{lastpage}
-
 \lhead{\fancyplain{}{\markright }} 
 \pagestyle{fancy}
 \fancyhf{}
@@ -83,6 +88,8 @@
 
 
 
+
+
 % list of equations
 % -----------------------
 \usepackage{tocloft} 
@@ -98,8 +105,13 @@
 % For Bibliography
 % 2. Includes "References" in the table of contents
 % -----------------------
-\usepackage{natbib}
-\usepackage[nottoc]{tocbibind}
+\usepackage[
+backend=biber,
+style=alphabetic,
+sorting=ynt
+]{biblatex}
+\addbibresource{references.bib}
+
 
 
 % Changing Numbering Scheme to Include Section Number
@@ -146,7 +158,7 @@
 \renewcommand{\contentsname}{Περιεχόμενα}
 \renewcommand{\figurename}{Εικόνα}
 \renewcommand{\tablename}{Πίνακας}
-\renewcommand{\bibname}{Βιβλιογραφία}
+% \renewcommand{\bibname}{Βιβλιογραφία}
 \newcommand{\listequationsname}{\Large{List of Equations}}
 % \renewcommand[\listtablename]{Λίστα Πινάκων}
 % \renewcommand[\listfigurename]{Λίστα Εικόνων}
@@ -162,6 +174,7 @@
 %	Document Begin
 %-----------------------------------------------------------------------
 \begin{document}
+
 
 
 \import{./}{titlepage.tex}
@@ -257,8 +270,13 @@
 
 % References 
 % -------------------------
-\bibliographystyle{unsrt}
-\bibliography{references}
+% \bibliographystyle{unsrt}
+% \bibliography{references}
+\printbibliography[
+heading=bibintoc,
+title={Βιβλιογραφία}
+]
+
 
 \end{document}
 % ---------------------------------------------------------------------
