--- a/main.tex
+++ b/main.tex
@@ -174,7 +174,7 @@ sorting=ynt
 %	Document Begin
 %-----------------------------------------------------------------------
 \begin{document}
-
+\sloppy
 
 
 \import{./}{titlepage.tex}
