Updates from ShareLaTeX

--- a/BinaryAddition.tex
+++ b/BinaryAddition.tex
@@ -99,7 +99,7 @@
 %--------------------------------------------
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.6]{FA.png}
+\includegraphics[scale=0.3]{FA.png}
 \caption{Full-Adder schematic}
 \label{FASchematic}
 \end{figure}
@@ -123,17 +123,17 @@
 μια επέκταση της πρόσθεσης μεταξύ ψηφίων που παρουσιάστηκε προηγουμένως τροφοδοτώντας 
 το κρατούμενο εισόδου των προηγούμενων σημαντικών ψηφίων στην είσοδο του πλήρη αθροιστή 
 των επομένων .
-\\
+
 % Figure
 % FA-Schematic
 %--------------------------------------------
-\begin{figure}[ht]
+\begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{IntAdder.png}
 \caption{Integer-Adder schematic}
 \label{IntegerAdderSchematic}
 \end{figure}
-\\
+
 
 
 
