--- a/modAdder.tex
+++ b/modAdder.tex
@@ -162,7 +162,7 @@ Zero,º Electronics, pp. 103-105, Feb. 1976.
 
 Χρησιμοποιώντας τον ειδικό τελεστή που παρουσιάστηκε στο κεφάλαιο 4 $"\circledast"$
 ο αθροιστής υπολοίπου $2^n-1$ μπορεί να υλοποιηθεί με ένα ακόμα παράλληλο τμήμα 
-με αποτέλεσμα να μειωθεί κατά ένα επίπεδο ο υπολογισμός του \cite{vergos}.
+με αποτέλεσμα να μειωθεί κατά ένα επίπεδο ο υπολογισμός του \cite{863036}.
 % -----------------------------------------------
 % G_{} = τα κρατούμενα του πρώτου επιπέδου 
 % G_{}^' = τα κρατούμενα του δεύτερου επιπέδου
