--- a/references.bib
+++ b/references.bib
@@ -15,18 +15,6 @@ ISSN={1058-6393},
 month={Nov},}
 
 
-@Article{j32_bit,
-author = {Matthew Keeter and David Money Harris and Andrew Macrae and Rebecca Glick and Madaleine Ong and Justin Schauer},
-title = {Implementation of 32-bit Ling and Jackson Adders},
-year = {2011}
-}
-
-@Article{j64_bit,
-author = {Tynan McAuley and William Koven and Andrew Carter and Paul Ning and David Money Harris},
-title = {Implementation of 64-bit Jackson Adders},
-year = {2013}
-}
-
 % ------------------------------------------------------------------------------------
 % JACKSON - High speed binary addition
 % ------------------------------------------------------------------------------------
@@ -43,16 +31,29 @@ doi={10.1109/ACSSC.2004.1399373},
 ISSN={},
 month={Nov},}
 
-@Article{vergos,
-author = {G.Dimitrakopoulos and D. G. Nikolos and H. T. Vergos and D. Nikolos and C. Efstathiou},
-title = {New Architectures For Module $2^n-1$ Adders}
-}
 
-@Article{modulo,
-author = {Lampros Kalampoukas and Dimitris Nikolos and Costas Efstathiou and Haridimos T. Vergos and John Kalamatianos},
-title = {High-Speed Parallel-Prefix Modulo $2^n-1$ Adders},
-year = {2000}
-}
+% ------------------------------------------------------------------------------------
+% High-speed parallel-prefix module 2n-1 adders
+% ------------------------------------------------------------------------------------
+@ARTICLE{863036, 
+author={L. Kalampoukas and D. Nikolos and C. Efstathiou and H. T. Vergos and J. Kalamatianos}, 
+journal={IEEE Transactions on Computers}, 
+title={High-speed parallel-prefix module 2n-1 adders}, 
+year={2000}, 
+volume={49}, 
+number={7}, 
+pages={673-680}, 
+keywords={adders;digital arithmetic;CMOS implementations;carry look-ahead structures;high-speed parallel-prefix module 2n-1 adders;parallel-prefix architecture;Adders;Application software;Circuits;Computer architecture;Concurrent computing;Delay;Fault tolerant systems;Logic;Signal generators;Very large scale integration}, 
+doi={10.1109/12.863036}, 
+ISSN={0018-9340}, 
+month={Jul},}
+
+
+% @Article{vergos,
+% author = {G.Dimitrakopoulos and D. G. Nikolos and H. T. Vergos and D. Nikolos and C. Efstathiou},
+% title = {New Architectures For Module $2^n-1$ Adders}
+% }
+
 
 % ------------------------------------------------------------------------------------
 % LING - High-Speed Binary Adder
@@ -75,3 +76,38 @@ author = {Giorgos Dimitrakopoulos and Dimitris Nikolos},
 title = {High-Speed Parallel-Prefix VLSI Ling Adders},
 year = {2005}
 }
+
+
+
+% ------------------------------------------------------------------------------------
+%  - Implementation of a 64-bit Jackson adder
+% ------------------------------------------------------------------------------------
+@INPROCEEDINGS{6810474, 
+author={T. McAuley and W. Koven and A. Carter and P. Ning and D. M. Harris}, 
+booktitle={2013 Asilomar Conference on Signals, Systems and Computers}, 
+title={Implementation of a 64-bit Jackson adder}, 
+year={2013}, 
+volume={}, 
+number={}, 
+pages={1149-1154}, 
+keywords={adders;Design Compiler;DesignWare adder;Jackson adder;Sklansky architecture;binary prefix addition decomposition;parallel prefix adders;Adders;Complexity theory;Computer architecture;Delays;Inverters;Logic gates;Microprocessors}, 
+doi={10.1109/ACSSC.2013.6810474}, 
+ISSN={}, 
+month={Nov},}
+
+
+% ------------------------------------------------------------------------------------
+%  - Implementation of 32-bit Ling and Jackson adders
+% ------------------------------------------------------------------------------------
+@INPROCEEDINGS{6189978, 
+author={M. Keeter and D. M. Harris and A. Macrae and R. Glick and M. Ong and J. Schauer}, 
+booktitle={2011 Conference Record of the Forty Fifth Asilomar Conference on Signals, Systems and Computers (ASILOMAR)}, 
+title={Implementation of 32-bit Ling and Jackson adders}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={170-175}, 
+keywords={adders;circuit complexity;32-bit Jackson adders;32-bit Ling adders;Ling adder factor complexity;critical path complexity;propagate logic complexity;Adders;Complexity theory;Computer architecture;Delay;Inverters;Logic gates;Microprocessors}, 
+doi={10.1109/ACSSC.2011.6189978}, 
+ISSN={1058-6393}, 
+month={Nov},}
