Updates from ShareLaTeX

--- a/references.bib
+++ b/references.bib
@@ -49,10 +49,6 @@ ISSN={0018-9340},
 month={Jul},}
 
 
-% @Article{vergos,
-% author = {G.Dimitrakopoulos and D. G. Nikolos and H. T. Vergos and D. Nikolos and C. Efstathiou},
-% title = {New Architectures For Module $2^n-1$ Adders}
-% }
 
 
 % ------------------------------------------------------------------------------------
@@ -71,11 +67,7 @@ doi={10.1147/rd.252.0156},
 ISSN={0018-8646},
 month={March},}
 
-@Article{Sparseness_ling,
-author = {Giorgos Dimitrakopoulos and Dimitris Nikolos},
-title = {High-Speed Parallel-Prefix VLSI Ling Adders},
-year = {2005}
-}
+
 
 
 
@@ -111,3 +103,42 @@ keywords={adders;circuit complexity;32-bit Jackson adders;32-bit Ling adders;Lin
 doi={10.1109/ACSSC.2011.6189978}, 
 ISSN={1058-6393}, 
 month={Nov},}
+
+
+
+
+% ------------------------------------------------------------------------------------
+% VERILOG
+% ------------------------------------------------------------------------------------
+@ARTICLE{1620780,
+author={IEEE},
+journal={IEEE Std 1364-2005 (Revision of IEEE Std 1364-2001)},
+title={IEEE Standard for Verilog Hardware Description Language},
+year={2006},
+volume={},
+number={},
+pages={0-560},
+keywords={},
+doi={10.1109/IEEESTD.2006.99495},
+ISSN={},
+month={},}
+
+
+
+
+
+
+@BOOK{vcs-synopsys,
+  TITLE = {VCS User Guide},
+  SUBTITLE = {},
+  AUTHOR = {Synopsys},
+  YEAR = {2015}, % I looked it up
+  PUBLISHER = {},
+}
+
+
+@Article{Sparseness_ling,
+author = {Giorgos Dimitrakopoulos and Dimitris Nikolos},
+title = {High-Speed Parallel-Prefix VLSI Ling Adders},
+year = {2005}
+}
