Updates from ShareLaTeX

--- a/modAdder.tex
+++ b/modAdder.tex
@@ -66,9 +66,12 @@
 και κρατούμενο εισόδου το κρατούμενο εξόδου του πρώτου αθροιστή. Το άθροισμα 
 του δεύτερου αθροιστή είναι και το ζητούμενο. Στο παρακάτω σχηματικό αποτυπώνεται
 αυτή η απλή αρχιτεκτονική που περιγράφηκε.
-\\\\
-\textcolor{red}{[Βάλε εικόνα του απλού αθροιστή $2^n-1$]}
-\\\\
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{Simple_2^n-1_adder.png}
+\caption{Απλή δομή αθροιστή υπολοίπου $2^n-1$}
+\label{fig:2^n-1_simple_adder}
+\end{figure}
 Η παραπάνω τεχνική έχει πολύ μεγάλη χρονική καθυστέρηση διότι υπάρχουν δύο 
 επίπεδα αθροιστών. Για να μειωθεί ο χρόνος που απαιτείται για να οδηγηθεί η έξοδος
 με το σωστό αποτέλεσμα μπορούμε να εκτελέσουμε παράλληλα δυο προσθέσεις του Α και Β
