Updates from ShareLaTeX

--- a/modAdder.tex
+++ b/modAdder.tex
@@ -80,8 +80,12 @@
 εισόδου του αθροιστή χωρίς κρατούμενο εισόδου. Αν η είσοδος επιλογής είναι ενεργή 
 τότε θα επιλέγεται η έξοδος του αθροιστή με κρατούμενο εισόδου όπως φαίνεται στην 
 παρακάτω εικόνα.
-\\\\
-\textcolor{red}{[Βάλε εικόνα του Επιλογής κρατουμένου αθροιστή $2^n-1$]}
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{Carry_select_2^n-1.png}
+\caption{Αρχιτεκτονική αθροιστή επιλογής κρατουμένου $2^n-1$}
+\label{fig:2^n-1_carry_select_adder}
+\end{figure}
 
 
 
