Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -117,6 +117,13 @@ sorting=ynt
 
 
 
+\usepackage{color, colortbl}
+%\definecolor{name}{system}{definition}
+\definecolor{Gray}{gray}{0.6}
+\definecolor{LightGray}{gray}{0.8}
+\definecolor{White}{gray}{1}
+\newcolumntype{g}{>{\columncolor{Gray}}c}
+
 % Changing Numbering Scheme to Include Section Number
 % -----------------------
 \usepackage{chngcntr}
