--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -4,6 +4,9 @@
 των αθροιστών. 
 
 
+
+
+
 \subsection{Πρόβλημα προθέματος}
 
 Ένα prefix problem ή πρόβλημα προθέματος 
@@ -119,7 +122,7 @@ $\circledast$ την παρακάτω λειτουργιά :
 
 
 \subsubsection{Ladner-Fischer Adder}
-
+\textcolor{red}{Ανελυσε Ladner-Fischer}
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{Ladner-Fischer.png}
@@ -137,6 +140,8 @@ $\circledast$ την παρακάτω λειτουργιά :
 
 
 \subsection{Δέντρα-Δομές Προθεμάτων}
+
+\textcolor{red}{
 R.P. Brent and H.T. Kung, A Regular Layout for Parallel
 Adders,º IEEE Trans. Computers, vol. 31, no. 3, pp. 260-264, Mar.
 1982.
@@ -147,7 +152,7 @@ Computers, vol. 22, no. 8, pp. 783-791, Aug. 1973.
 \\\\
 J. Sklansky, Conditional Sum Addition Logic, IRE Trans.
 Electronic Computers, vol. 9, no. 6, pp. 226-231, June 1960.
-
+}
 
 
 
