Updates from ShareLaTeX

--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -119,7 +119,20 @@ $\circledast$ την παρακάτω λειτουργιά :
 
 
 \subsection{Παράλληλοι Προθεματικοί Αθροιστές}
+Η διάταξη που παρουσιάστηκε στην εικόνα \ref{Serial-PrefixTree} έχει την δομή 
+του απλού αθροιστή διάδοσης κρατουμένου εκφρασμένο σε προθεματική μορφή. Ο προθεματικός
+όμως υπολογισμός κρατουμένων μπορεί να υπολογιστεί παράλληλα, αποτελώντας την προθεματική 
+έκφραση ως κινητήριο παράγοντα διάφορων παράλληλων αρχιτεκτονικών που προτάθηκαν.
+\\
+\textcolor{red}{Απόδειξη παράλληλου υπολογισμού}
+\\
+Μερικές σημαντικές αρχιτεκτονικές διατυπώνονται στις επόμενες παραγράφους με σύντομη
+περιγραφή.
 
+
+
+
+\subsection{Δέντρα-Δομές Προθεμάτων}
 
 \subsubsection{Ladner-Fischer Adder}
 \textcolor{red}{Ανελυσε Ladner-Fischer}
@@ -129,17 +142,6 @@ $\circledast$ την παρακάτω λειτουργιά :
 \caption{Ladner-Fischer Prefix Tree Adder}
 \label{Ladner-FischerTree}
 \end{figure}
-
-
-
-
-
-
-
-
-
-
-\subsection{Δέντρα-Δομές Προθεμάτων}
 
 \textcolor{red}{
 R.P. Brent and H.T. Kung, A Regular Layout for Parallel
@@ -153,6 +155,20 @@ Computers, vol. 22, no. 8, pp. 783-791, Aug. 1973.
 J. Sklansky, Conditional Sum Addition Logic, IRE Trans.
 Electronic Computers, vol. 9, no. 6, pp. 226-231, June 1960.
 }
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
+\caption{Brent-Kung Prefix Tree Adder}
+\label{BrentKungTree}
+\end{figure}
+
+
+
+
+
+
+
+
 
 
 
