Updates from ShareLaTeX

--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -96,7 +96,8 @@ $\circledast$ την παρακάτω λειτουργιά :
 ενός απλού διάδοσης κρατουμένου αθροιστή σε αναγόμενο σε πρόβλημα προθέματος.\\ 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.45]{Serial-Prefix.png}
+% \includegraphics[width=\textwidth]{Serial-Prefix.png}
+\includegraphics[scale=0.4]{Serial-Prefix.png}
 \caption{Serial-Prefix Tree Adder}
 \label{Serial-PrefixTree}
 \end{figure}
@@ -138,7 +139,7 @@ $\circledast$ την παρακάτω λειτουργιά :
 \textcolor{red}{Ανελυσε Ladner-Fischer}
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.5]{Ladner-Fischer.png}
+\includegraphics[scale=0.4]{Ladner-Fischer.png}
 \caption{Ladner-Fischer Prefix Tree Adder}
 \label{Ladner-FischerTree}
 \end{figure}
@@ -157,7 +158,8 @@ Electronic Computers, vol. 9, no. 6, pp. 226-231, June 1960.
 }
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
+%\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
+\includegraphics[scale=0.45]{Brent_Kung_Prefix.png}
 \caption{Brent-Kung Prefix Tree Adder}
 \label{BrentKungTree}
 \end{figure}
