--- a/modAdder.tex
+++ b/modAdder.tex
@@ -290,7 +290,8 @@ $(g_{n-1},p_{n-1})$ αλλά, όπως έχει προαναφερθεί και 
 \textcolor{red}{[Εξήγησε το παρακάτω παράδειγμα]}
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{2^8-1_new_structure.png}
+% \includegraphics[width=\textwidth]{2^8-1_new_structure.png}
+\includegraphics[scale=0.5]{2^8-1_new_structure.png}
 \caption{Παράλληλος προθεματικός αθροιστής υπολοίπου $2^8-1$}
 \label{fig:2^8-1_new_structure}
 \end{figure}
