Updates from ShareLaTeX

--- a/Results.tex
+++ b/Results.tex
@@ -1,5 +1,17 @@
 \section{Αποτελέσματα}
 
+
+\subsection{Εργαλείο Μετρήσεων}
+Για την μέτρηση της καθυστέρησης, εμβαδού και κατανάλωση ενέργειας χρησιμοποιήθηκε το 
+εργαλείο Design Compler της Synopsys. \\
+Βιβλιοθήκη \\
+Compile strategy : Bottom up \\
+Reports
+
+
+
+
+\clearpage
 \begin{multicols}{2}
 [\subsection{Μη-Τοπογραφικές Μετρήσεις}]
 %------------------------------------------------------------------------------
