--- a/main.tex
+++ b/main.tex
@@ -192,12 +192,24 @@ sorting=ynt
 % Blank page
 \newpage\null\thispagestyle{empty}\newpage
 
-\tableofcontents
+
+% Abstract
+% -------------------------
+\import{./}{Abstract.tex}
 \clearpage
 
+\thispagestyle{empty}
+\tableofcontents
+\thispagestyle{empty}
+\clearpage
+
+\thispagestyle{empty}
 \listoffigures
+\thispagestyle{empty}
 \listoftables
+\thispagestyle{empty}
 \listofmyequations
+\thispagestyle{empty}
 \clearpage
 
 
