Updates from ShareLaTeX

--- a/modAdder.tex
+++ b/modAdder.tex
@@ -50,10 +50,8 @@
 αποτέλεσμα θα έπρεπε να ήταν επτά και όχι μηδέν. Σε αυτό το σημείο λοιπόν είναι σημαντικό
 να τονιστεί πως χρησιμοποιείται διπλή αναπαράσταση του μηδέν. Η μία αναπαράσταση είναι η 
 προφανής όπου όλα τα ψηφία είναι 0 και η δεύτερη είναι η $2^n-1$, δηλαδή όλα τα ψηφία 
-να είναι στο 1.
-\\\\
-\textcolor{red}{[Διπλή Αναπαράσταση του μηδέν, πως μπορούμε να την αντιμετωπίσουμε]}
-\\\\
+να είναι στο 1. Αυτό το φαινόμενο δεν είναι πάντα επιθυμητό. Στην συνέχεια του κεφαλαίου
+θα δοθεί μια πρόταση για την αντιμετώπιση της διπλής αυτής αναπαράστασης.
 
 Υπάρχουν διάφοροι τρόποι για να υπολογιστεί στο υλικό το αποτέλεσμα 
 ενός αθροιστή υπολοίπου $2^n-1$.
@@ -61,8 +59,8 @@
 κρατούμενο εισόδου , παίρνει ως είσοδο τα Α και Β και η έξοδος του τροφοδοτεί
 την είσοδο του δεύτερου αθροιστή με δεύτερο όρισμα τον μηδενικό αριθμό
 και κρατούμενο εισόδου το κρατούμενο εξόδου του πρώτου αθροιστή. Το άθροισμα 
-του δεύτερου αθροιστή είναι και το ζητούμενο. Στο παρακάτω σχηματικό αποτυπώνεται
-αυτή η απλή αρχιτεκτονική που περιγράφηκε.
+του δεύτερου αθροιστή είναι και το ζητούμενο. Στην εικόνα \ref{fig:2^n-1_simple_adder}
+αποτυπώνεται η απλή αρχιτεκτονική που περιγράφηκε.
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{Simple_2^n-1_adder.png}
@@ -76,13 +74,44 @@
 των δύο αθροιστών θα οδηγούνται σε έναν πολυπλέκτη με είσοδο επιλογής το κρατούμενο 
 εισόδου του αθροιστή χωρίς κρατούμενο εισόδου. Αν η είσοδος επιλογής είναι ενεργή 
 τότε θα επιλέγεται η έξοδος του αθροιστή με κρατούμενο εισόδου όπως φαίνεται στην 
-παρακάτω εικόνα.
+ εικόνα \ref{fig:2^n-1_carry_select_adder}.
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{Carry_select_2^n-1.png}
 \caption{Αρχιτεκτονική αθροιστή επιλογής κρατουμένου $2^n-1$}
 \label{fig:2^n-1_carry_select_adder}
 \end{figure}
+Πρέπει να σημειωθεί πως και στις δύο περιπτώσεις απαιτείται η υλοποίηση δύο αθροιστών 
+με αποτέλεσμα αυξάνεται το εμβαδόν του αθροιστή στο διπλάσιο συγκριτικά με έναν απλό αθροιστή.
+Ένας ακόμα παράγοντας σε αυτές τις αρχιτεκτονικές είναι η δομή των επιμέρους αθροιστών. 
+Η επίτευξη υψηλών ταχυτήτων είναι δυνατή επιλέγοντας μια παράλληλη προθεματική δομή 
+για τον σχεδιασμό των αθροιστών που συντελούν το αθροιστή υπολοίπου, θυσιάζοντας αρκετά
+τον χώρο και την κατανάλωση.
+
+Μία καθιερωμένη υλοποίηση των αθροιστών αυτής της κατηγορίας χρησιμοποιεί έναν τυπικό αθροιστή
+συνδέοντας το κρατούμενο εξόδου στο κρατούμενο εισόδου δημιουργώντας έναν αθροιστή κυκλικού
+κρατουμένου (end-round carry). Αυτή η τοπολογία μετατρέπει τον αθροιστή σε ένα ασύγχρονο 
+ακολουθιακό κύκλωμα, του οποίου η κατάσταση εξαρτάται από προηγούμενες και από την 
+καθυστέρηση της διάδοσης κρατουμένων. Εξαιτίας αυτής της συμπεριφοράς δημιουργούνται
+πρακτικά προβλήματα χρονισμού με αποτέλεσμα την επιπλέον αύξηση του χρόνου καθυστέρησης.
+Το πρόβλημα αυτό παρατηρείται στις περιπτώσεις που οι δυαδικοί αριθμοί εισόδου 
+είναι συμπληρωματικοί ως προς ένα και αντιμετωπίζεται \cite{1674817} οδηγώντας την είσοδο 
+κρατουμένου με την παρακάτω συνάρτηση και όχι απευθείας με το κρατούμενο εξόδου.
+\begin{equation}
+    C_{in} = C_{out} + P_{n-1:0}
+\end{equation}
+Με αυτήν την μικρή διαμόρφωση αντιμετωπίζεται επίσης και η διπλή αναπαράσταση του μηδέν.
+Η μόνη περίπτωση που προκύπτει η δεύτερη αναπαράσταση του μηδέν ($1...11$) πετυχαίνεται
+όταν οι αριθμοί εισόδου είναι συμπληρωματικοί. Με την παραπάνω τροποποίηση όμως στην
+στην περίπτωση αυτή το σήμα $P_{n-1:0}$ ενεργοποιείται και οδηγεί το κρατούμενο εισόδου, 
+με προφανές τελικό αποτέλεσμα το μηδέν στην κανονική αναπαράστασή του.
+
+Στην συνέχεια της εργασίας αυτής οι αθροιστές υπολοίπου που θα παρουσιαστούν ή θα 
+σχεδιαστούν, θα είναι με την σύμβαση της διπλής αναπαράστασης. Συγκριτικά, οι αθροιστές
+με διπλή αναπαράσταση είναι ταχύτεροι και απαιτούν λιγότερους πόρους από αυτούς
+με μονή αναπαράσταση \cite{298378}. Αυτός είναι και ο λόγος που οι αυτοί αθροιστές  
+προτιμούνται στις περιπτώσεις που είναι εφικτοί. Αν η εφαρμογή απαιτεί μονή αναπαράσταση 
+τότε η πρόσθεση επιπλέον λογικής στους αθροιστές είναι αναπόφευκτη.
 
 
 
@@ -135,7 +164,7 @@ $c'_{n-1} = G'_{n-1}$
 \label{fig:2^n-1_simple_Prefix_structure}
 \end{figure}
 Ένας σχεδιασμός σαν τον παραπάνω, εκτός από το γεγονός του επιπλέον επιπέδου,
-έχει και το μειονέκτημα στο ότι το κρατούμενο εξόδου του πρώτου επιπέδου οδηγεί 
+έχει και το μειονέκτημα στο ότι το κρατούμενο εξόδου του πρώτου τμήματος οδηγεί 
 n κόμβους του τελευταίου επιπέδου, όπως εκφράζεται και την εξίσωση \ref{eq:2^n-1_G'_eguation}.
 \\\\
 \textcolor{red}{
