--- a/references.bib
+++ b/references.bib
@@ -105,6 +105,39 @@ ISSN={1058-6393},
 month={Nov},}
 
 
+% ------------------------------------------------------------------------------------
+%  - Comment on the Sequential and Indeterminate Behavior of an End-Around-Carry Adder
+% ------------------------------------------------------------------------------------
+@ARTICLE{1674817, 
+author={J. J. Shedletsky}, 
+journal={IEEE Transactions on Computers}, 
+title={Comment on the Sequential and Indeterminate Behavior of an End-Around-Carry Adder}, 
+year={1977}, 
+volume={C-26}, 
+number={3}, 
+pages={271-272}, 
+keywords={End-around-carry (EAC) adder, negative zero, one's complement arithmetic.;Arithmetic;Joining processes;Propagation delay;Timing;End-around-carry (EAC) adder, negative zero, one's complement arithmetic.}, 
+doi={10.1109/TC.1977.1674817}, 
+ISSN={0018-9340}, 
+month={March},}
+
+
+% ------------------------------------------------------------------------------------
+%  - Area-time efficient modulo 2n-1 adder design
+% ------------------------------------------------------------------------------------
+@ARTICLE{298378, 
+author={C. Efstathiou and D. Nikolos and J. Kalamatianos}, 
+journal={IEEE Transactions on Circuits and Systems II: Analog and Digital Signal Processing}, 
+title={Area-time efficient modulo 2n-1 adder design}, 
+year={1994}, 
+volume={41}, 
+number={7}, 
+pages={463-467}, 
+keywords={VLSI;adders;carry logic;integrated logic circuits;logic design;cost function area-time product;design procedures;modulo 2n-1 adders;one-level carry look-ahead addition;residue number system;two-level carry look-ahead addition;Adders;Algorithm design and analysis;Circuits;Design methodology;Logic design;Multiplexing;Routing;Signal processing algorithms;Tin;Very large scale integration}, 
+doi={10.1109/82.298378}, 
+ISSN={1057-7130}, 
+month={Jul},}
+
 
 
 % ------------------------------------------------------------------------------------
