Updates from ShareLaTeX

--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -124,9 +124,6 @@ $\circledast$ την παρακάτω λειτουργιά :
 του απλού αθροιστή διάδοσης κρατουμένου εκφρασμένο σε προθεματική μορφή. Ο προθεματικός
 όμως υπολογισμός κρατουμένων μπορεί να υπολογιστεί παράλληλα, αποτελώντας την προθεματική 
 έκφραση ως κινητήριο παράγοντα διάφορων παράλληλων αρχιτεκτονικών που προτάθηκαν.
-\\
-\textcolor{red}{Απόδειξη παράλληλου υπολογισμού}
-\\
 Μερικές σημαντικές αρχιτεκτονικές διατυπώνονται στις επόμενες παραγράφους με σύντομη
 περιγραφή.
 
@@ -135,13 +132,22 @@ $\circledast$ την παρακάτω λειτουργιά :
 
 \subsection{Δέντρα-Δομές Προθεμάτων}
 
-\subsubsection{Ladner-Fischer Adder}
-\textcolor{red}{Ανελυσε Ladner-Fischer}
 \begin{figure}[H]
-\centering
-\includegraphics[scale=0.4]{Ladner-Fischer.png}
-\caption{Ladner-Fischer Prefix Tree Adder}
-\label{Ladner-FischerTree}
+    \centering
+    %\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
+    \includegraphics[scale=0.45]{Brent_Kung_Prefix.png}
+    \caption{Brent-Kung Prefix Tree Adder}
+    \label{BrentKungTree}
+\end{figure}
+
+
+% \subsubsection{Ladner-Fischer Adder}
+% \textcolor{red}{Ανελυσε Ladner-Fischer}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{Ladner-Fischer.png}
+    \caption{J. Sklansky Prefix Tree Adder}
+    \label{Ladner-FischerTree}
 \end{figure}
 
 \textcolor{red}{
@@ -156,13 +162,7 @@ Computers, vol. 22, no. 8, pp. 783-791, Aug. 1973.
 J. Sklansky, Conditional Sum Addition Logic, IRE Trans.
 Electronic Computers, vol. 9, no. 6, pp. 226-231, June 1960.
 }
-\begin{figure}[H]
-\centering
-%\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
-\includegraphics[scale=0.45]{Brent_Kung_Prefix.png}
-\caption{Brent-Kung Prefix Tree Adder}
-\label{BrentKungTree}
-\end{figure}
+
 
 
 
