--- a/references.bib
+++ b/references.bib
@@ -159,6 +159,29 @@ month={},}
 
 
 
+% ------------------------------------------------------------------------------------
+% Sklansky
+% ------------------------------------------------------------------------------------
+@ARTICLE{5219822, 
+author={J. Sklansky}, 
+journal={IRE Transactions on Electronic Computers}, 
+title={Conditional-Sum Addition Logic}, 
+year={1960}, 
+volume={EC-9}, 
+number={2}, 
+pages={226-231}, 
+keywords={Adders;Bibliographies;Delay effects;Digital arithmetic;Distributed computing;Logic design;Petroleum;Propagation delay;Senior members;Switching circuits}, 
+doi={10.1109/TEC.1960.5219822}, 
+ISSN={0367-9950}, 
+month={June},}
+
+
+
+
+
+
+
+
 
 
 @BOOK{vcs-synopsys,
